--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/core": "8.2.0",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "8.2.0",
-    "@angular/http": "7.2.15",
     "@angular/material": "^8.1.2",
     "@angular/platform-browser": "8.2.0",
     "@angular/platform-browser-dynamic": "8.2.0",
@@ -27,10 +26,11 @@
     "core-js": "^3.1.4",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.802.0",
+    "@angular-devkit/build-angular": "~0.802.0",
     "@angular/cli": "8.2.0",
     "@angular/compiler-cli": "8.2.0",
     "@angular/language-service": "8.2.0",
@@ -38,7 +38,7 @@
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.6.9",
-    "codelyzer": "^5.1.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.2.0",
@@ -52,6 +52,7 @@
     "ts-node": "~4.1.0",
     "tslint": "^5.18.0",
     "typescript": "3.5.3",
-    "webpack": "^4.39.1"
+    "webpack": "^4.39.1",
+    "webpack-dev-server": "^3.7.2"
   }
 }
