--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "8.2.0",
     "@angular/platform-browser-dynamic": "8.2.0",
     "@angular/router": "8.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "core-js": "^3.1.4",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
