--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "polyfills": "src/polyfills.ts",
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/styling"
+                "src/styles"
               ]
             },
             "assets": [
@@ -26,7 +26,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styling/styles.scss",
+              "src/styles/main.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": []
@@ -77,7 +77,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
-              "src/styling/styles.scss",
+              "src/styles/main.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "assets": [
